leonardo, a style change

--- a/template/style.scss
+++ b/template/style.scss
@@ -295,6 +295,10 @@ span.dim {
   font-size: 4rem;
 }
 
+.larger {
+  font-size: 6rem;
+}
+
 .sticky,
 .remark-preview-area .hljs-default {
   animation:signup-response 0;
