--- a/template/index.html
+++ b/template/index.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <title>{{title}}</title>
-  {{{style}}}
-  <script src="remark.min.js"></script>
-  <script>
-    function create() {
-      return remark.create({
-        {{{source}}},
-        ratio: '16:9',
-        countIncrementalSlides: false,
-        navigation: {
-          scroll: false,
-        }
-        // highlightLines: true,
-        // countIncrementalSlides: true,
-        // highlightStyle: 'github'
-      });
-    }
-  </script>
-</head>
-<body onload="slideshow = create()">
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>{{title}}</title>
+    {{{style}}}
+    <script src="remark.min.js"></script>
+    <script>
+      function create() {
+        return remark.create({
+          {{{source}}},
+          // ratio: '29:9',
+          ratio: '16:9',
+          countIncrementalSlides: false,
+          navigation: {
+            scroll: false,
+          }
+          // highlightLines: true,
+          // countIncrementalSlides: true,
+          // highlightStyle: 'github'
+        });
+      }
+    </script>
+  </head>
+  <body onload="slideshow = create()"></body>
 </html>
