--- a/template/index.html
+++ b/template/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>{{title}}</title>
     {{{style}}}
     <script src="remark.min.js"></script>
@@ -11,8 +11,8 @@
         return remark.create({
           {{{source}}},
           // ratio: '29:9',
-          // ratio: '16:9',
-          ratio: '58:9',
+          ratio: '16:9',
+          // ratio: '58:9',
           countIncrementalSlides: false,
           navigation: {
             scroll: false,
